--- a/src/main/resources/templates/board/save-form.mustache
+++ b/src/main/resources/templates/board/save-form.mustache
@@ -1,5 +1,7 @@
 {{> layout/header}}
 
+{{sessionUser.username}}
+
 <section>
     <form action="/board/save" method="post" enctype="application/x-www-form-urlencoded">
         <input type="text" name="title" placeholder="제목"><br>
